Fixed the issue with not seeing patient and note tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=medilabo-frontend
 server.port=8082
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
